# RepoGuard

./: .gitignore  .repoguardignore  CHANGELOG.md  LICENSE  NOTICE  README.md  TRADEMARKS.md  action.yml  pyproject.toml
.github/workflows/: action-selftest.yml  ci.yml
src/repoguard/: __init__.py  baseline.py  cli.py  gitdiff.py  launcher.py  models.py  reporters.py  rules.py  scanner.py  target.py
tests/: check_action.py  check_artifacts.py  fixture_builder.py  test_launcher.py  test_noise_control.py  test_scanner.py  test_security.py
tests/fixtures/clean-repo/: README.md
tests/fixtures/clean-repo/src/: app.py
tests/fixtures/suspicious-repo/: README.md  install.sh  miner.js  package.json  steal.py
tests/fixtures/suspicious-repo/.github/workflows/: pwn.yml
