[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "repoguard"
version = "0.1.0"
description = "Static repository risk scanner for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "MPG ONE LLC" }
]
keywords = [
  "ai-agents",
  "security",
  "static-analysis",
  "codex",
  "claude-code",
  "cursor",
  "github"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mpg-one/repoguard"
Issues = "https://github.com/mpg-one/repoguard/issues"

[project.scripts]
repoguard = "repoguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
