[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "repoguard"
version = "0.3.0"
description = "Static repository risk scanner for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "MPG ONE LLC" }
]
keywords = [
  "ai-agents",
  "security",
  "static-analysis",
  "codex",
  "claude-code",
  "cursor",
  "github"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mpg-one/RepoGuard"
Issues = "https://github.com/mpg-one/RepoGuard/issues"

[project.scripts]
repoguard = "repoguard.cli:main"
repoguard-exec = "repoguard.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]
